--- a/TechAgCompany.UI/Views/City/Create.cshtml
+++ b/TechAgCompany.UI/Views/City/Create.cshtml
@@ -1,4 +1,4 @@
-﻿@model TechAgCompany.Entities.City
+﻿@model CreateCityViewModel
 
 @{
     ViewData["Title"] = "Create";
@@ -14,9 +14,9 @@
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             
             <div class="form-group">
-                <label asp-for="Name" class="control-label"></label>
-                <input asp-for="Name" class="form-control" />
-                <span asp-validation-for="Name" class="text-danger"></span>
+                <label asp-for="cityName" class="control-label"></label>
+                <input asp-for="cityName" class="form-control" />
+                <span asp-validation-for="cityName" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <label asp-for="StateId" class="control-label"></label>
