--- a/TechAgCompany.UI/Views/City/Index.cshtml
+++ b/TechAgCompany.UI/Views/City/Index.cshtml
@@ -1,4 +1,4 @@
-﻿@model IEnumerable<City>
+﻿@model IEnumerable<CityViewmodel>
 
 @{
     ViewData["Title"] = "Index";
@@ -14,13 +14,13 @@
         <tr>
            
             <th>
-                @Html.DisplayNameFor(model => model.Name)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.StateId)
+                @Html.DisplayNameFor(model => model.CityName)
             </th>
             <th>
                 @Html.DisplayNameFor(model => model.StateName)
+            </th>
+            <th>
+                @Html.DisplayNameFor(model => model.CountryName)
             </th>
             <th>
                 Country Name
@@ -31,17 +31,15 @@
     <tbody>
 @foreach (var item in Model) {
         <tr>
+            
             <td>
-                @Html.DisplayFor(modelItem => item.Id)
+                @Html.DisplayFor(modelItem => item.CityName)
             </td>
             <td>
-                @Html.DisplayFor(modelItem => item.Name)
+                @Html.DisplayFor(modelItem => item.StateName)
             </td>
             <td>
-                @Html.DisplayFor(modelItem => item.StateName.Name)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.StateName.CountryName.Name)
+                @Html.DisplayFor(modelItem => item.CountryName)
             </td>
             <td>
                 @Html.ActionLink("Edit", "Edit", new { id=item.Id }) |
