--- a/TechAgCompany.UI/Views/_ViewImports.cshtml
+++ b/TechAgCompany.UI/Views/_ViewImports.cshtml
@@ -1,4 +1,7 @@
 ﻿@using TechAgCompany.UI
 @using TechAgCompany.UI.Models
 @using TechAgCompany.Entities
+@using TechAgCompany.UI.ViewModel.CountryViewModel
+@using TechAgCompany.UI.ViewModel.StateViewmodel
+@using TechAgCompany.UI.ViewModel.CityViewModel
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
