--- a/TechAgCompany.UI/Views/State/Index.cshtml
+++ b/TechAgCompany.UI/Views/State/Index.cshtml
@@ -38,9 +38,7 @@
                 @Html.DisplayFor(modelItem => item.CountryName)
             </td>
             <td>
-                @Html.ActionLink("Edit", "Edit", new { id=item.Id }) |
-                @Html.ActionLink("Details", "Details", new { id=item.Id}) |
-                @Html.ActionLink("Delete", "Delete", new {   id=item.Id })
+               <partial name="Actionlink" model="@item.Id" />
             </td>
         </tr>
 }
