--- a/TechAgCompany.UI/Views/Home/Index.cshtml
+++ b/TechAgCompany.UI/Views/Home/Index.cshtml
@@ -2,7 +2,28 @@
     ViewData["Title"] = "Home Page";
 }
 
-<div class="text-center">
+@* <div class="text-center">
     <h1 class="display-4">Welcome</h1>
     <p>Learn about <a href="https://docs.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
+</div> *@
+<div class="row">
+<div class="col-4">
+    <div style="width:200px;height:120px;background-color:burlywood;color:white">
+
+        @await Component.InvokeAsync("CountCity")
+    </div>
+</div>
+
+<div class="col-4">
+    <div style="width:220px;height:120px;background-color:burlywood;color:white">
+
+        @await Component.InvokeAsync("CountState")
+    </div>
+</div>
+    <div class="col-4">
+        <div style="width:220px;height:120px;background-color:burlywood;color:white">
+
+            @await Component.InvokeAsync("CountCountry")
+        </div>
+    </div>
 </div>
