Session in asp.net Core MVC

--- a/TechAgCompany.UI/Views/Shared/_HeaderNav.cshtml
+++ b/TechAgCompany.UI/Views/Shared/_HeaderNav.cshtml
@@ -1,4 +1,4 @@
-﻿
+﻿@inject IHttpContextAccessor ContextAccessor
     <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light bg-white border-bottom box-shadow mb-3">
         <div class="container-fluid">
             <a class="navbar-brand" asp-area="" asp-controller="Home" asp-action="Index">TechAgCompany.UI</a>
@@ -24,7 +24,12 @@
                         <a class="nav-link text-dark" asp-area="" asp-controller="City" asp-action="index">City</a>
                     </li>
                 </ul>
-            </div>
+            @if (ContextAccessor.HttpContext.Session.GetInt32("userId") != null)
+            {
+                @(ContextAccessor.HttpContext.Session.GetString("userName") + " ")
+                <a asp-action="Logout" asp-controller="Auth">LogOut</a>
+            }
+        </div>
         </div>
     </nav>
 
