--- a/ConcertBooking.WebHost/Views/Shared/_HeaderNav.cshtml
+++ b/ConcertBooking.WebHost/Views/Shared/_HeaderNav.cshtml
@@ -1,14 +1,16 @@
 ﻿
 <nav class="navbar navbar-expand-lg bg-dark" data-bs-theme="dark">
     <div class="container-fluid">
-        <a class="navbar-brand" href="#">Navbar</a>
+        <a class="navbar-brand" asp-action="Index" asp-controller="Home"></a>
+        <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTXsajtseQKPZopjP5LSNWJC9jD8fZJ02P_MV-rTgjZcbad8WKoZpBmzAKYp_CBUETyEoM&usqp=CAU" width="200" height="80" />
+
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarColor02" aria-controls="navbarColor02" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse" id="navbarColor02">
             <ul class="navbar-nav me-auto">
                 <li class="nav-item">
-                    <a class="nav-link active" href="#">
+                    <a class="nav-link active" asp-controller="Home" asp-action="Index">
                         Home
                         <span class="visually-hidden">(current)</span>
                     </a>
