Availabel Tickets Controller action methodes and views

--- a/ConcertBooking.WebHost/Views/Home/Index.cshtml
+++ b/ConcertBooking.WebHost/Views/Home/Index.cshtml
@@ -8,7 +8,7 @@
     {
         <div class="col-3 mb-2">
             <div class="card" style="width: 18rem;">
-                <img class="card-img-top" src="@item.ConcertImage" alt="Card image cap">
+                <img class= "card-img-top" style="height:220px" src="@item.ConcertImage" alt="Card image cap">
                 <div class="card-body">
                     <h5 class="card-title">@item.ConcertName</h5>
                     <h5 class="card-title">@item.ArtistName</h5>
