--- a/ConcertBooking.WebHost/Views/Home/Details.cshtml
+++ b/ConcertBooking.WebHost/Views/Home/Details.cshtml
@@ -2,7 +2,7 @@
 
 <div class="row">
     <div class="col-4">
-        <img src="@Model.ConcertImage" alt="Concert Image" />
+        <img src="@Model.ConcertImage" height=" 250px" alt="Concert Image" />
     </div>
     <div class="col-8">
         
@@ -16,7 +16,7 @@
                 <div class="mt-2"><img src=@Model.ArtistImage class="rounded-circle img-fluid"n style="height:200px;width:200px" /></div>
                 <div>
                 <div>Artist Name: @Model.ArtistName</div>
-                <div class="mt-3"><a class="btn btn-success">See Availabel Ticket</a></div>
+                <div class="mt-3"><a asp-action="AvailabelTickets" asp-route-id="@Model.ConcertId" class="btn btn-success">See Availabel Ticket</a></div>
                 </div>
             </div> 
 </div>
