--- a/ConcertBooking.WebHost/Views/Shared/_HeaderNav.cshtml
+++ b/ConcertBooking.WebHost/Views/Shared/_HeaderNav.cshtml
@@ -1,4 +1,5 @@
-﻿
+﻿@using ConcertBooking.Infrastructure
+
 <nav class="navbar navbar-expand-lg bg-dark" data-bs-theme="dark">
     <div class="container-fluid">
         <a class="navbar-brand" asp-action="Index" asp-controller="Home"></a>
@@ -9,31 +10,36 @@
         </button>
         <div class="collapse navbar-collapse" id="navbarColor02">
             <ul class="navbar-nav me-auto">
+                @if (User.IsInRole(GlobalConfiguration.Admin_Role))
+                {
                 <li class="nav-item">
                     <a class="nav-link active" asp-controller="Home" asp-action="Index">
                         Home
                         <span class="visually-hidden">(current)</span>
                     </a>
                 </li>
-                <li class="nav-item">
-                    <a class="nav-link" asp-controller="Concerts" asp-action="Index" >Concerts</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" asp-controller="Venue" asp-action="Index">Venues</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" asp-controller="Artist" asp-action="Index">Artists</a>
-                </li>
-                <li class="nav-item dropdown">
-                    <a class="nav-link dropdown-toggle" data-bs-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">Dropdown</a>
-                    <div class="dropdown-menu">
-                        <a class="dropdown-item" href="#">Action</a>
-                        <a class="dropdown-item" href="#">Another action</a>
-                        <a class="dropdown-item" href="#">Something else here</a>
-                        <div class="dropdown-divider"></div>
-                        <a class="dropdown-item" href="#">Separated link</a>
-                    </div>
-                </li>
+               
+                    <li class="nav-item">
+                        <a class="nav-link" asp-controller="Concerts" asp-action="Index" >Concerts</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" asp-controller="Venue" asp-action="Index">Venues</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" asp-controller="Artist" asp-action="Index">Artists</a>
+                    </li>
+
+                    <li class="nav-item dropdown">
+                        <a class="nav-link dropdown-toggle" data-bs-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">Dropdown</a>
+                        <div class="dropdown-menu">
+                            <a class="dropdown-item" href="#">Action</a>
+                            <a class="dropdown-item" href="#">Another action</a>
+                            <a class="dropdown-item" href="#">Something else here</a>
+                            <div class="dropdown-divider"></div>
+                            <a class="dropdown-item" href="#">Separated link</a>
+                        </div>
+                    </li>
+                }
             </ul>
             <partial name="_LoginPartial"/>
             @* <form class="d-flex">
