--- a/ConcertBooking.WebHost/Views/Shared/_HeaderNav.cshtml
+++ b/ConcertBooking.WebHost/Views/Shared/_HeaderNav.cshtml
@@ -29,7 +29,7 @@
                         <a class="nav-link" asp-controller="Artist" asp-action="Index">Artists</a>
                     </li>
 
-                    <li class="nav-item dropdown">
+                    @* <li class="nav-item dropdown">
                         <a class="nav-link dropdown-toggle" data-bs-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">Dropdown</a>
                         <div class="dropdown-menu">
                             <a class="dropdown-item" href="#">Action</a>
@@ -38,9 +38,20 @@
                             <div class="dropdown-divider"></div>
                             <a class="dropdown-item" href="#">Separated link</a>
                         </div>
+                    </li> *@
+                   
+                }
+                @if (User.Identity.IsAuthenticated)
+                {
+                    <li class="nav-item">
+                        <a class="nav-link" asp-controller="Ticket" asp-action="MyTicket">
+                            My ticket
+
+                        </a>
                     </li>
                 }
             </ul>
+           
             <partial name="_LoginPartial"/>
             @* <form class="d-flex">
                 <input class="form-control me-sm-2" type="search" placeholder="Search">
