--- a/ConcertBooking.WebHost/Views/Ticket/MyTicket.cshtml
+++ b/ConcertBooking.WebHost/Views/Ticket/MyTicket.cshtml
@@ -1,4 +1,92 @@
-﻿
-@*
-    For more information on enabling MVC for empty projects, visit http://go.microsoft.com/fwlink/?LinkID=397860
-*@
+﻿@* @using ConcertBooking.WebHost.ViewModel.TicketViewModel;
+@model IEnumerable<BookingViewModel>
+@if (Model == null|| !Model.Any())
+{
+    <div class="alert alert-warning">
+        You have no tickets
+    </div>
+}
+else
+{
+
+    foreach(var booking in Model)
+    {
+        <div class="card mb-4"n id="booking-@booking.BookingId">
+            <div class="card-header">
+                Booking iD:@booking.BookingId - Date:@booking.BookingDate.ToString("dd/MM/yyyy")
+            </div>
+            <div class="card-body">
+                <h5 class="card-title">Concert: @booking.ConcertName</h5>
+                <ul class="list-group">
+                    @foreach(var ticket in booking.Tickets)
+                    {
+                        
+                        <li class="list-group-item">Seat Number: @ticket.SeatNumber</li>
+                    }
+                </ul>
+            </div>
+            <div class="card-footer">
+                <button class="btn btn-primary" onclick="prinTicket'@booking.BookingId')">
+                    Print Ticket
+                </button>
+            </div>
+        </div>
+    }
+}
+@section script{
+    <script>
+        function prinTicket(bookingId) {
+            var element = document.getElementById('booking'+bookingId)
+            element.classList.add('print-section');
+            window.print();
+            element.classList.remove('print-section')
+        }
+    </script>
+}
+ *@
+
+@using ConcertBooking.WebHost.ViewModel.TicketViewModel;
+@model IEnumerable<BookingViewModel>
+
+@if (Model == null || !Model.Any())
+{
+    <div class="alert alert-warning">
+        You have no tickets
+    </div>
+}
+else
+{
+    foreach (var booking in Model)
+    {
+        <div class="card mb-4" id="booking-@booking.BookingId">
+            <div class="card-header">
+                Booking ID: @booking.BookingId - Date: @booking.BookingDate.ToString("dd/MM/yyyy")
+            </div>
+            <div class="card-body">
+                <h5 class="card-title">Concert: @booking.ConcertName</h5>
+                <ul class="list-group">
+                    @foreach (var ticket in booking.Tickets)
+                    {
+                        <li class="list-group-item">Seat Number: @ticket.SeatNumber</li>
+                    }
+                </ul>
+            </div>
+            <div class="card-footer">
+                <button class="btn btn-primary" onclick="prinTicket('@booking.BookingId')">
+                    Print Ticket
+                </button>
+            </div>
+        </div>
+    }
+}
+
+@section script {
+    <script>
+        function prinTicket(bookingId) {
+            var element = document.getElementById('booking-' + bookingId);
+            element.classList.add('print-section');
+            window.print();
+            element.classList.remove('print-section');
+        }
+    </script>
+}
