--- a/TechAgCompany.UI/Views/Shared/_HeaderNav.cshtml
+++ b/TechAgCompany.UI/Views/Shared/_HeaderNav.cshtml
@@ -23,6 +23,12 @@
                     <li class="nav-item">
                         <a class="nav-link text-dark" asp-area="" asp-controller="City" asp-action="index">City</a>
                     </li>
+                <li class="nav-item">
+                    <a class="nav-link text-dark" asp-area="" asp-controller="Skill" asp-action="index">Skill</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link text-dark" asp-area="" asp-controller="Student" asp-action="index">Student</a>
+                </li>
                 </ul>
             @if (ContextAccessor.HttpContext.Session.GetInt32("userId") != null)
             {
